tests/testcases/valid/local_static/01_basic_local_static.ciel
// Basic local static variable test

int counter() {
    static int count = 0;
    count = count + 1;
    return count;
}

int main() {
    int a = counter();  // Should be 1
    int b = counter();  // Should be 2
    int c = counter();  // Should be 3

    // Validate static counter behavior
    if (a != 1) return 1;
    if (b != 2) return 2;
    if (c != 3) return 3;

    return 0;
}
