tests/testcases/invalid/semantic/93_multiply_assign_to_rvalue.ciel
// Error: compound assignment *= to rvalue
int main() {
    int a = 5;
    int b = 3;

    // Error: (a * b) is rvalue
    (a * b) *= 2;

    return 0;
}
